--- a/demo01/index.html
+++ b/demo01/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
-    <div>hello world</div>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
