--- a/demo10/index.html
+++ b/demo10/index.html
@@ -11,6 +11,6 @@
     </style>
 </head>
 <body>
-    <script src="./index.js" type="module"></script>
+    <script src="src/index.js" type="module"></script>
 </body>
 </html>
